javascript/ql/test/query-tests/NodeJS/InvalidExport/tst6.js
var e = {};
module.exports = e;
exports = e; // OK
exports.a = 12;
